nginx-ingress/nginx-ingress-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  ports:
  - port: 9113
    name: prometheus
  selector:
    app: nginx-ingress
