nginx-ingress/ingress-dashborad.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard
  namespace: kubernetes-dashboard
  annotations:
    nginx.org/redirect-to-https: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/ssl-services: "kubernetes-dashboard"
spec:
  tls:
  - hosts: 
    - k8s.dashboard.com
    secretName: tls-secret
  rules:
  - host: k8s.dashboard.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
